Bug 165223 - SB Navigator 'Reminder' objects set in a block of text are copied and pasted with that text, corrupts the movement stack
Summary: SB Navigator 'Reminder' objects set in a block of text are copied and pasted ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: Navigator Navigate-By
  Show dependency treegraph
 
Reported: 2025-02-13 03:13 UTC by V Stuart Foote
Modified: 2025-02-18 18:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2025-02-13 03:13:48 UTC
Reminder(s) set in Navigator at some place within a document, are copied and pasted with that content. Increasing the number of Reminder objects and leaving them out of sequence for Recency navigation.

Seems like it would be preferred to not copy/paste reminders that are not intentionally set.

STR

1. new writer doc
2. DT <F3>
3. open SB Navigator
4. position cursor some place in text
5. drop a Reminder object (the Paper Clip button)
6. reposition cursor
7. drop additional Reminder (can repeat to max of 5)
8. copy the text
9. paste the text
10. set 'Navigate by' lb to Reminder mode
11. notice the Reminder now are duplicated with the pasted text, and that the stack of 5 Reminders may have been truncated with some of the Reminders from the initial set gone, replaced by their copy.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fb8bf5f209e1bd7fd7d8ad555ec66dbf31649ee8
CPU threads: 8; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 1 Heiko Tietze 2025-02-13 08:03:08 UTC
Confirming, looks like an ordinary bug.

Without any indicator and no feedback the feature makes not much sense.
Comment 2 V Stuart Foote 2025-02-13 13:08:52 UTC
(In reply to Heiko Tietze from comment #1)
> 
> Without any indicator and no feedback the feature makes not much sense.

Unlike Bookmarks (which get included into the current document or saved out to ODF) Reminders are a simple edit cursor positions temporary and relevant only to the current edit session.

Use case is that the Reminders represent a navigable stack of positions within an open document that can be traversed using the Navigator. If the 'Navigate by' selection is 'Reminder', edit cursor movement on the canvas is only within that stack of Reminders. But if in 'Recency' mode, the navigation includes the Reminder stack but also positions of other edit actions as well.

So user placement of a Reminder is a very efficient method to hold once place within a document while it is open for review or edit. With a default stack of 5 Reminders (though it would be nice to be able for user to decrease or increase the count), the Navigate by Reminder mode avoids need for scrolling or pgUp/pgDd movement to return to specific location in a document. To be useful they don't need to be visible or show on the Navigator deck, they just need to be reliable to navigate with--the repositioned document view port is sufficient indicator and feedback.

Their undesired inclusion in copy/paste of a text span screws up the stack and makes them less reliable to use.
Comment 3 Heiko Tietze 2025-02-13 15:15:03 UTC
(In reply to V Stuart Foote from comment #2)
> To be useful they don't need to be visible or show on the Navigator deck...
I don't challenge the functionality but when you click a button it requires some response in the UI. Suggest to show something in the document, or to list the reminders in the Navigator. But off topic here.
Comment 4 V Stuart Foote 2025-02-13 15:21:37 UTC
(In reply to Heiko Tietze from comment #3)
> (In reply to V Stuart Foote from comment #2)
> > To be useful they don't need to be visible or show on the Navigator deck...
> I don't challenge the functionality but when you click a button it requires
> some response in the UI. Suggest to show something in the document, or to
> list the reminders in the Navigator. But off topic here.

Hmm, but doesn't the UI already respond by repositioning the edit cursor, and when appropriate the view port?
Comment 5 Jim Raykowski 2025-02-17 06:36:58 UTC
Here is a link to a patch that uses what is done to not copy DDE marks to not copy Navigator Reminders:
https://gerrit.libreoffice.org/c/core/+/181759
Comment 6 Commit Notification 2025-02-18 18:40:36 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6d978385b1d34fe0703ca9cc841c7ea67abd47cc

Resolves tdf#165223 SB Navigator 'Reminder' objects set in a block of

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.