Resolves tdf#165223 SB Navigator 'Reminder' objects set in a block of

text are copied and pasted with that text, corrupts the movement
stack

Change-Id: Icce2a96184099f62ccac1475cb57fdb9e6975847
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181759
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
Tested-by: Jenkins
Reviewed-by: Vernon, Stuart Foote <vsfoote@libreoffice.org>